load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_deb")
# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/example/project",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
    ],
)

go_binary(
    name = "cert-viewer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "debian-data",
    extension = "tar.gz",
    srcs = [":cert-viewer"],
    package_dir = "/usr/bin",
    modes = {
        "/usr/bin/cert-viewer" : "0755"
    },
)

# 0755
# usr/bin/cert-viewer
pkg_deb(
    name = "debian",
    architecture = "amd64",
    data = ":debian-data",
    description = "Tool to view multiple x509 Certificates.",
    homepage = "https://mgit.at",
    maintainer = "Daniel Ainikkal <dainikkal@mgit.at>",
    package = "cert-viewer",
    version = "0.1.1",
)