load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")
load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mgit-at/cert-viewer
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mgit-at/cert-viewer",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_alecthomas_kingpin_v2//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_binary(
    name = "cert-viewer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "debian-data",
    srcs = [":cert-viewer"],
    extension = "tar.gz",
    modes = {
        "/usr/bin/cert-viewer": "0755",
    },
    package_dir = "/usr/bin",
)

pkg_deb(
    name = "debian",
    architecture = "amd64",
    data = ":debian-data",
    description = "Tool to view multiple x509 Certificates.",
    homepage = "https://mgit.at",
    maintainer = "Michael Gebetsroither <mgebetsroither@mgit.at>",
    package = "cert-viewer",
    version = "0.9.1",
)
